Fix zoombar pan right icon misalignment

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
@@ -11,6 +11,9 @@
     &:hover {
       color: $lightFontColor;
     }
+    &:before {
+      margin: 0;
+    }
   }
   .toolPane > li {
     [title]:hover {
